[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OptunaFS"
version = "0.1.0"
description = "Feature selection with Optuna"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "optuna",
]
dynamic = ["readme"]

[tool.setuptools]
packages = ["OptunaFS"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true